noinst_LIBRARIES = libdummy.a
libdummy_a_SOURCES = copy_x_colours.c glut_windows.c

EXTRA_DIST = Include/WS_graphics.h Include/glut_window_prototypes.h

INCLUDES = -I$(top_srcdir)/Graphics/OpenGL_graphics/Include \
	-I$(top_srcdir)/Graphics/Include \
	-I$(top_srcdir)/Graphics/GLUT_windows/Include \
	$(MNI_INCLUDES)
